# Advent-of-Code

./: .flake8  .gitignore  aoc.code-workspace  day.template  make_day.py  pyproject.toml  requirements.txt  run_day.py  setup.cfg  template.py
2021/day02/: script.py
2021/day06/: script.py
2021/day1/: script.py
2021/day10/: script.py
2021/day11/: script.py
2021/day12/: script.py
2021/day13/: script.py
2021/day14/: script.py
2021/day15/: script.py
2021/day16/: script.py
2021/day17/: script.py
2021/day18/: script.py
2021/day19/: script.py
2021/day20/: script.py
2021/day21/: script.py
2021/day22/: script.py
2021/day23/: script.py
2021/day24/: script.py
2021/day25/: script.py
2021/day3/: script.py
2021/day4/: script.py
2021/day5/: script.py
2021/day7/: script.py
2021/day8/: script.py
2021/day9/: script.py
2022/day01/: script.py
2022/day02/: script.py
2022/day03/: script.py
2022/day04/: script.py
2022/dayX/: script.py
solutions/: __init__.py
solutions/utils/: aoc.py  graph.py  logger.py  ocr.py
solutions/y2015/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d20.py  d21.py  d22.py  d23.py  d24.py  d25.py
solutions/y2016/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d20.py  d21.py  d22.py  d23.py  d24.py  d25.py
solutions/y2017/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d20.py  d21.py  d22.py  d23.py  d24.py  d25.py
solutions/y2018/: computer.py  d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d20.py  d21.py  d22.py  d23.py  d24.py  d25.py
solutions/y2020/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d20.py  d21.py  d22.py  d23.py  d24.py  d25.py
solutions/y2021/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d20.py  d21.py  d22.py  d23.py  d24.py  d25.py
solutions/y2022/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  (+16 more)
(+50 files in other folders)
