[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "My solutions for https://adventofcode.com"
repository = "https://github.com/Atlante45/advent-of-code"
authors = ["Clément Brisset"]
packages = [{ include = "solutions" }]

[tool.poetry.dependencies]
python = ">=3.10"
advent-of-code-data = "^1.3.0"
click = "^8.1.3"
more-itertools = "^10.1.0"
numpy = "^1.23.5"
scipy = "^1.9.3"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"

[tool.poetry.plugins."adventofcode.user"]
atlante45 = "solutions:solve"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
