[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "My solutions for https://adventofcode.com"
repository = "https://github.com/Atlante45/advent-of-code"
authors = ["Clément Brisset"]
packages = [{ include = "solutions" }]

[tool.poetry.dependencies]
python = ">=3.10"
advent-of-code-data = "^2.0.1"
click = "^8.1.7"
more-itertools = "^10.1.0"
numpy = "^1.26.2"
scipy = "^1.11.4"
tqdm = "^4.66.1"

[tool.poetry.plugins."adventofcode.user"]
atlante45 = "solutions:solve"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
