[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "My solutions for https://adventofcode.com"
repository = "https://github.com/Atlante45/advent-of-code"
authors = ["Clément Brisset"]
packages = [{ include = "solutions" }]

[tool.poetry.dependencies]
python = ">=3.10"
advent-of-code-data = "^2.0.1"
click = "^8.1.8"
more-itertools = "^10.1.0"
numpy = "^2.2.1"
scipy = "^1.11.4"
tqdm = "^4.66.1"
z3-solver = "^4.13.4.0"
igraph = "^0.11.3"
networkx = "^3.2.1"
matplotlib = "^3.8.1"

[tool.poetry.plugins."adventofcode.user"]
atlante45 = "solutions:solve"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
