[metadata]
name = advent-of-code
version = 0.1.0
author = Clément Brisset
url = https://github.com/Atlante45/advent-of-code
description = My solutions for https://adventofcode.com

[options]
packages = find:
zip_safe = True
include_package_data = True

[options.entry_points]
adventofcode.user = 
    atlante45 = solutions:solve

[options.extras_require]
dev = 
    black==22.10.0
    flake8==6.0.0
